--- a/Front/src/styles/Header.css
+++ b/Front/src/styles/Header.css
@@ -126,8 +126,9 @@ a{
 
 @media (max-width: 600px) {
     .header-container {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
         padding: 10px;
     }
 
